--- a/Movieland/Scenes/Movie/Cells/MovieTableViewCell.xib
+++ b/Movieland/Scenes/Movie/Cells/MovieTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17502"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -10,37 +10,74 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieTableViewCell" rowHeight="75" id="KGk-i7-Jjw" customClass="MovieTableViewCell" customModule="Movieland" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="75"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieTableViewCell" rowHeight="147" id="KGk-i7-Jjw" customClass="MovieTableViewCell" customModule="Movieland" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="75"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M5A-ge-GQI">
-                        <rect key="frame" x="20" y="10" width="280" height="55"/>
+                        <rect key="frame" x="20" y="10" width="280" height="100"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vUH-zC-ekG">
-                                <rect key="frame" x="0.0" y="0.0" width="40" height="55"/>
+                                <rect key="frame" x="0.0" y="0.0" width="80" height="100"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="9f4-8v-4Ub"/>
+                                    <constraint firstAttribute="width" constant="80" id="9f4-8v-4Ub"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0vK-Ph-Fnl">
-                                <rect key="frame" x="50" y="17" width="42" height="21"/>
+                                <rect key="frame" x="90" y="10" width="180" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vYW-Th-Lbz">
+                                <rect key="frame" x="90" y="41" width="180" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qdl-rx-Dcx">
+                                <rect key="frame" x="90" y="72" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WA1-DS-RNa">
+                                <rect key="frame" x="143" y="72" width="41.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LVs-Qk-e20">
+                                <rect key="frame" x="137" y="72" width="1" height="20"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="7Lx-4m-LOS"/>
+                                    <constraint firstAttribute="width" constant="1" id="szg-Zo-ctA"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="0vK-Ph-Fnl" secondAttribute="trailing" constant="10" id="0Um-LV-Cqi"/>
                             <constraint firstAttribute="bottom" secondItem="vUH-zC-ekG" secondAttribute="bottom" id="0fM-CP-g6F"/>
                             <constraint firstItem="vUH-zC-ekG" firstAttribute="top" secondItem="M5A-ge-GQI" secondAttribute="top" id="1hT-ab-8F9"/>
-                            <constraint firstAttribute="height" constant="55" id="edL-yf-9QS"/>
-                            <constraint firstItem="0vK-Ph-Fnl" firstAttribute="centerY" secondItem="vUH-zC-ekG" secondAttribute="centerY" id="gzH-0c-kU4"/>
+                            <constraint firstAttribute="trailing" secondItem="vYW-Th-Lbz" secondAttribute="trailing" constant="10" id="6iW-Kx-Bke"/>
+                            <constraint firstItem="vYW-Th-Lbz" firstAttribute="top" secondItem="0vK-Ph-Fnl" secondAttribute="bottom" constant="10" id="9I6-Fv-CBk"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="WA1-DS-RNa" secondAttribute="trailing" constant="10" id="Ezb-gE-stY"/>
+                            <constraint firstItem="LVs-Qk-e20" firstAttribute="leading" secondItem="qdl-rx-Dcx" secondAttribute="trailing" constant="5" id="Jk2-0M-fgO"/>
+                            <constraint firstItem="WA1-DS-RNa" firstAttribute="top" secondItem="vYW-Th-Lbz" secondAttribute="bottom" constant="10" id="MLY-kE-MkQ"/>
+                            <constraint firstItem="vYW-Th-Lbz" firstAttribute="leading" secondItem="vUH-zC-ekG" secondAttribute="trailing" constant="10" id="W07-24-Vu8"/>
+                            <constraint firstAttribute="height" constant="100" id="edL-yf-9QS"/>
+                            <constraint firstItem="WA1-DS-RNa" firstAttribute="leading" secondItem="LVs-Qk-e20" secondAttribute="trailing" constant="5" id="o9e-Eo-n8h"/>
+                            <constraint firstItem="LVs-Qk-e20" firstAttribute="top" secondItem="vYW-Th-Lbz" secondAttribute="bottom" constant="10" id="pth-mw-jtb"/>
+                            <constraint firstItem="qdl-rx-Dcx" firstAttribute="top" secondItem="vYW-Th-Lbz" secondAttribute="bottom" constant="10" id="t8t-IO-Kem"/>
+                            <constraint firstItem="qdl-rx-Dcx" firstAttribute="leading" secondItem="vUH-zC-ekG" secondAttribute="trailing" constant="10" id="x9T-1H-RNG"/>
                             <constraint firstItem="vUH-zC-ekG" firstAttribute="leading" secondItem="M5A-ge-GQI" secondAttribute="leading" id="xsK-1D-xHc"/>
                             <constraint firstItem="0vK-Ph-Fnl" firstAttribute="leading" secondItem="vUH-zC-ekG" secondAttribute="trailing" constant="10" id="ySh-YM-tQ0"/>
+                            <constraint firstItem="0vK-Ph-Fnl" firstAttribute="top" secondItem="M5A-ge-GQI" secondAttribute="top" constant="10" id="yez-cM-1tq"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -54,10 +91,14 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="containerView" destination="M5A-ge-GQI" id="oAy-ds-jjq"/>
+                <outlet property="dateLabel" destination="WA1-DS-RNa" id="HV2-aj-Q0G"/>
+                <outlet property="genreLabel" destination="vYW-Th-Lbz" id="ABK-8P-AX9"/>
                 <outlet property="movieImageView" destination="vUH-zC-ekG" id="Yj2-17-s8q"/>
                 <outlet property="movieTitleLabel" destination="0vK-Ph-Fnl" id="hw1-sq-b3o"/>
+                <outlet property="runTimelabel" destination="qdl-rx-Dcx" id="QeH-Va-SP2"/>
+                <outlet property="seperatorView" destination="LVs-Qk-e20" id="fYo-Hi-eD7"/>
             </connections>
-            <point key="canvasLocation" x="-62.318840579710148" y="77.34375"/>
+            <point key="canvasLocation" x="-62.318840579710148" y="92.410714285714278"/>
         </tableViewCell>
     </objects>
     <resources>
