--- a/Movieland/Scenes/Movie/Cells/TableViewCells/MovieTableViewCell.xib
+++ b/Movieland/Scenes/Movie/Cells/TableViewCells/MovieTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17502"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -32,51 +32,60 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vYW-Th-Lbz">
-                                <rect key="frame" x="90" y="41" width="180" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qdl-rx-Dcx">
-                                <rect key="frame" x="90" y="72" width="42" height="21"/>
+                                <rect key="frame" x="105" y="41" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WA1-DS-RNa">
-                                <rect key="frame" x="143" y="72" width="41.5" height="21"/>
+                                <rect key="frame" x="178" y="41" width="41.5" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LVs-Qk-e20">
-                                <rect key="frame" x="137" y="72" width="1" height="20"/>
+                                <rect key="frame" x="152" y="41.5" width="1" height="20"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="7Lx-4m-LOS"/>
                                     <constraint firstAttribute="width" constant="1" id="szg-Zo-ctA"/>
                                 </constraints>
                             </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YS0-6E-Ecx">
+                                <rect key="frame" x="85" y="44" width="15" height="15"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="15" id="0zZ-VI-uWd"/>
+                                    <constraint firstAttribute="width" constant="15" id="cqV-kX-3L7"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KhN-BM-Dcr">
+                                <rect key="frame" x="158" y="44" width="15" height="15"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="15" id="aJG-gh-5hg"/>
+                                    <constraint firstAttribute="height" constant="15" id="ejQ-Uh-KXs"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="0vK-Ph-Fnl" secondAttribute="trailing" constant="10" id="0Um-LV-Cqi"/>
                             <constraint firstAttribute="bottom" secondItem="vUH-zC-ekG" secondAttribute="bottom" id="0fM-CP-g6F"/>
                             <constraint firstItem="vUH-zC-ekG" firstAttribute="top" secondItem="M5A-ge-GQI" secondAttribute="top" id="1hT-ab-8F9"/>
-                            <constraint firstAttribute="trailing" secondItem="vYW-Th-Lbz" secondAttribute="trailing" constant="10" id="6iW-Kx-Bke"/>
-                            <constraint firstItem="vYW-Th-Lbz" firstAttribute="top" secondItem="0vK-Ph-Fnl" secondAttribute="bottom" constant="10" id="9I6-Fv-CBk"/>
+                            <constraint firstItem="KhN-BM-Dcr" firstAttribute="leading" secondItem="LVs-Qk-e20" secondAttribute="trailing" constant="5" id="8cV-K5-qfN"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="WA1-DS-RNa" secondAttribute="trailing" constant="10" id="Ezb-gE-stY"/>
+                            <constraint firstItem="KhN-BM-Dcr" firstAttribute="centerY" secondItem="WA1-DS-RNa" secondAttribute="centerY" id="H8N-2H-Aro"/>
+                            <constraint firstItem="WA1-DS-RNa" firstAttribute="leading" secondItem="KhN-BM-Dcr" secondAttribute="trailing" constant="5" id="IXn-A7-Bsg"/>
+                            <constraint firstItem="LVs-Qk-e20" firstAttribute="centerY" secondItem="qdl-rx-Dcx" secondAttribute="centerY" id="JSz-4y-B1X"/>
                             <constraint firstItem="LVs-Qk-e20" firstAttribute="leading" secondItem="qdl-rx-Dcx" secondAttribute="trailing" constant="5" id="Jk2-0M-fgO"/>
-                            <constraint firstItem="WA1-DS-RNa" firstAttribute="top" secondItem="vYW-Th-Lbz" secondAttribute="bottom" constant="10" id="MLY-kE-MkQ"/>
-                            <constraint firstItem="vYW-Th-Lbz" firstAttribute="leading" secondItem="vUH-zC-ekG" secondAttribute="trailing" constant="10" id="W07-24-Vu8"/>
+                            <constraint firstItem="YS0-6E-Ecx" firstAttribute="leading" secondItem="vUH-zC-ekG" secondAttribute="trailing" constant="5" id="TMp-Mf-fkT"/>
+                            <constraint firstItem="qdl-rx-Dcx" firstAttribute="leading" secondItem="YS0-6E-Ecx" secondAttribute="trailing" constant="5" id="aSm-Ab-AbA"/>
+                            <constraint firstItem="WA1-DS-RNa" firstAttribute="centerY" secondItem="LVs-Qk-e20" secondAttribute="centerY" id="cbL-Hc-NWl"/>
                             <constraint firstAttribute="height" constant="100" id="edL-yf-9QS"/>
-                            <constraint firstItem="WA1-DS-RNa" firstAttribute="leading" secondItem="LVs-Qk-e20" secondAttribute="trailing" constant="5" id="o9e-Eo-n8h"/>
-                            <constraint firstItem="LVs-Qk-e20" firstAttribute="top" secondItem="vYW-Th-Lbz" secondAttribute="bottom" constant="10" id="pth-mw-jtb"/>
-                            <constraint firstItem="qdl-rx-Dcx" firstAttribute="top" secondItem="vYW-Th-Lbz" secondAttribute="bottom" constant="10" id="t8t-IO-Kem"/>
-                            <constraint firstItem="qdl-rx-Dcx" firstAttribute="leading" secondItem="vUH-zC-ekG" secondAttribute="trailing" constant="10" id="x9T-1H-RNG"/>
+                            <constraint firstItem="qdl-rx-Dcx" firstAttribute="top" secondItem="0vK-Ph-Fnl" secondAttribute="bottom" constant="10" id="uYQ-kz-F4u"/>
                             <constraint firstItem="vUH-zC-ekG" firstAttribute="leading" secondItem="M5A-ge-GQI" secondAttribute="leading" id="xsK-1D-xHc"/>
                             <constraint firstItem="0vK-Ph-Fnl" firstAttribute="leading" secondItem="vUH-zC-ekG" secondAttribute="trailing" constant="10" id="ySh-YM-tQ0"/>
+                            <constraint firstItem="YS0-6E-Ecx" firstAttribute="centerY" secondItem="qdl-rx-Dcx" secondAttribute="centerY" id="yWn-fD-lgE"/>
                             <constraint firstItem="0vK-Ph-Fnl" firstAttribute="top" secondItem="M5A-ge-GQI" secondAttribute="top" constant="10" id="yez-cM-1tq"/>
                         </constraints>
                     </view>
@@ -91,12 +100,13 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="containerView" destination="M5A-ge-GQI" id="oAy-ds-jjq"/>
+                <outlet property="dateImage" destination="KhN-BM-Dcr" id="bg0-Lx-0ON"/>
                 <outlet property="dateLabel" destination="WA1-DS-RNa" id="HV2-aj-Q0G"/>
-                <outlet property="genreLabel" destination="vYW-Th-Lbz" id="ABK-8P-AX9"/>
                 <outlet property="movieImageView" destination="vUH-zC-ekG" id="Yj2-17-s8q"/>
                 <outlet property="movieTitleLabel" destination="0vK-Ph-Fnl" id="hw1-sq-b3o"/>
-                <outlet property="runTimelabel" destination="qdl-rx-Dcx" id="QeH-Va-SP2"/>
+                <outlet property="rateImage" destination="YS0-6E-Ecx" id="pMR-Gp-Cvo"/>
                 <outlet property="seperatorView" destination="LVs-Qk-e20" id="fYo-Hi-eD7"/>
+                <outlet property="voteAvarageLabel" destination="qdl-rx-Dcx" id="QeH-Va-SP2"/>
             </connections>
             <point key="canvasLocation" x="-62.318840579710148" y="92.410714285714278"/>
         </tableViewCell>
